# ravenos

./: .asm-lsp.toml  .clippy.toml  .editorconfig  .gitignore  .tombi.toml  Cargo.toml  README.md  README.rst  rust-toolchain.toml  specs.json
.cargo/: config.toml
.config/: bacon.toml
.zed/: debug.json  settings.json
crates/os/: Cargo.toml  build.rs
crates/os/src/: console.rs  entry.asm  lang_items.rs  linker.ld  main.rs  sbi.rs  syscall.h.in
