#:schema https://www.schemastore.org/cargo.json

[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
repository = "https://github.com/princemuel/ravenos"
license    = "MIT OR Apache-2.0"
publish    = false

[workspace.dependencies]

[workspace.lints.clippy]
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# --- Allowed (too noisy / not applicable) ---
arbitrary_source_item_ordering = "allow"
expect_used                    = "allow"
implicit_return                = "allow"  # redundant
let_underscore_untyped         = "allow"
missing_docs_in_private_items  = "allow"  # uncomment if it gets annoying
missing_errors_doc             = "allow"
missing_panics_doc             = "allow"
missing_trait_methods          = "allow"
pub_with_shorthand             = "allow"  # redundant
single_call_fn                 = "allow"
unseparated_literal_suffix     = "allow"
# module_name_repetitions    = "allow"  # uncomment if it gets annoying
# panic                      = "allow"  # uncomment if you use panic! intentionally
# std_instead_of_alloc       = "allow"  # uncomment if you add alloc later
# implicit_return            = "allow"  # restriction lint, very noisy in Rust style

# --- Escalate the ones you care most about ---
default_union_representation   = "deny"
empty_drop                     = "deny"
missing_asserts_for_indexing   = "deny"
mixed_read_write_in_expression = "deny"
panic_in_result_fn             = "deny"

[workspace.lints.rust]
# --- Lint groups ---
future-incompatible                        = { level = "warn", priority = -1 }
nonstandard-style                          = { level = "warn", priority = -1 }
rust-2018-idioms                           = { level = "warn", priority = -1 }
unknown-or-malformed-diagnostic-attributes = { level = "warn", priority = -1 }
unused                                     = { level = "warn", priority = -1 }

# --- Undefined / unsafe behaviour ---
ffi-unwind-calls       = "deny"  # C function unwinds into Rust = instant UB
keyword-idents-2024    = "deny"
non-ascii-idents       = "deny"  # homoglyph attacks (Cyrillic 'а' vs ASCII 'a')
unsafe-op-in-unsafe-fn = "deny"  # forces explicit unsafe {} blocks inside unsafe fn

# --- API / interface correctness ---
macro-use-extern-crate       = "deny"  # use explicit `use crate::macro` instead
meta-variable-misuse         = "deny"  # malformed macro_rules! metavariables
missing-copy-implementations = "warn"  # reminder to derive Copy where trivially safe
# missing-docs               = "warn"  # uncomment when the project matures
redundant-imports            = "deny"
unnameable-types             = "warn"
unreachable-pub              = "warn"

# --- Type system / lifetime hygiene ---
ambiguous-negative-literals   = "warn"  # -1i32.abs() is parsed as -(1i32.abs()), not (-1i32).abs()
deref-into-dyn-supertrait     = "warn"  # &dyn Sub deref'd to &dyn Super. subtle dispatch change
impl-trait-redundant-captures = "warn"
redundant-lifetimes           = "deny"
single-use-lifetimes          = "deny"
trivial-casts                 = "deny"
trivial-numeric-casts         = "deny"
unit-bindings                 = "deny"
unused-import-braces          = "deny"
unused-lifetimes              = "warn"
unused-qualifications         = "deny"
unused-results                = "warn"

# --- Drop / resource safety ---
let-underscore-drop = "warn"

# --- Style / future compatibility ---
closure-returning-async-block = "warn"
keyword-idents-2018           = "warn"

# --- Uncomment when ready ---
# missing-docs              = "warn"   # enable once public API stabilises
# unsafe-code               = "warn"   # enable/disable per project
# unused-crate-dependencies = "warn"   # enable per-crate, noisy with dev-dependencies

[profile.bench]
opt-level     = 3
debug         = false
lto           = true
codegen-units = 1

[profile.dev]
opt-level       = 1
debug           = 2
overflow-checks = true
lto             = false
incremental     = true

[profile.release]
opt-level     = 3
debug         = 2
strip         = "none"
lto           = "fat"
panic         = "abort"
codegen-units = 1
